# Pelican-VLA05

./: .gitignore  readme.md
attention_vis/: .env.example  .gitignore  README.md  pyproject.toml
attention_vis/src/attnvis/: __init__.py  __main__.py  config.py  dump_dense.py  figlib.py  paths.py  run.py
attention_vis/src/attnvis/adapters/: pelicanvla.py
attention_vis/src/attnvis/core/: render.py  types.py
attention_vis/src/attnvis/figs/: __init__.py  make_montage.py
attention_vis/src/attnvis/registry/: __init__.py  embodiments.py  preflight.py
attention_vis/src/attnvis/sources/: _lerobot_frame.py  libero.py  robomind.py  robotwin.py
pelican_vla0.5_infer/: NOTICE  README.md  basevla_infer.py  pelicanvla05_infer.py  pyproject.toml  requirements.txt
pelican_vla0.5_infer/src/lerobot/: __version__.py
pelican_vla0.5_infer/src/lerobot/configs/: default.py
pelican_vla0.5_infer/src/lerobot/datasets/: utils.py
pelican_vla0.5_infer/src/lerobot/policies/: __init__.py  pretrained.py  utils.py
pelican_vla0.5_infer/src/lerobot/policies/basevla_4B/: __init__.py  modeling_basevla.py  transform_basevla.py
pelican_vla0.5_infer/src/lerobot/policies/basevla_4B/cosmos_tokenizer/: __init__.py
pelican_vla0.5_infer/src/lerobot/policies/pelicanvla05/: __init__.py  configuration_pelicanvla.py  modeling_pelicanvla.py
pelican_vla0.5_infer/src/lerobot/policies/pelicanvla05/cosmos_tokenizer/: image_lib.py
pelican_vla0.5_infer/src/lerobot/transforms/: core.py  utils.py
pelican_vla0.5_infer/src/lerobot/utils/: utils.py
